feat: 유저가 도전중인 목록에 미션 추가하는 API 스웨거와 연동
