# lany/week9/mission/swagger/store.swagger.yaml
@@ -276,3 +276,90 @@ paths:
                   message:
                     type: string
                     example: 서버 에러, 관리자에게 문의 바랍니다.
+  /store/challenge-mission:
+    post:
+      tags:
+        - store
+      summary: 미션 도전 목록에 추가
+      description: 가게의 미션을 유저가 도전 중인 목록에 추가합니다.
+      operationId: addChallengeMission
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                store_id:
+                  type: number
+                  description: 가게 id
+                  example: 1
+                mission_id:
+                  type: number
+                  description: 미션 id
+                  example: 1
+                user_id:
+                  type: number
+                  description: 유저 id
+                  example: 1
+      responses:
+        "200":
+          description: 유저의 도전 목록에 가게 미션 추가 성공!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+                  data:
+                    type: object
+                    example: { "storeId": 1 }
+        "400":
+          description: 잘못된 요청
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON001
+                  message:
+                    type: string
+                    example: 잘못된 요청입니다
+        "500":
+          description: 서버 에러
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: COMMON000
+                  message:
+                    type: string
+                    example: 서버 에러, 관리자에게 문의 바랍니다.
